extra spacing fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,25 @@ body {
   background-color: rgb(0, 0, 0, 0.1);
 }
 
+@media screen and (max-width: 600px) {
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
+}
+
+@media screen and (max-width: 992px) and (min-width: 601px) {
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+  }
+}
 @import url("https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Tangerine&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap");
@@ -310,21 +329,21 @@ ul.tabs {
   width: 30%;
   height: 30%;
 }
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 600px) {
   .vertical-items {
     width: 40%;
     margin: 1rem;
   }
 }
 
-@media screen and (max-width: 1200px) and (min-width: 661px) {
+@media screen and (max-width: 1200px) and (min-width: 601px) {
   .vertical-items {
     width: 30%;
     margin: 0.5rem;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1201px) {
   .vertical-items {
     width: 20%;
     margin: 1rem;
